--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Landing Page</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <time id="time"></time>
     <h1>
-       <span id="greeting">Good Morning</span>
+       <span id="greeting">
+           
+        </span>
     </h1>
 
     <h2>What is your focus today</h2>
 
-    <script src="script.js"></script>
+    <script src="scipts/script.js"></script>
 </body>
 </html>
