--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <time id="time"></time>
     <h1>
        <span id="greeting">
-           
+
         </span>
     </h1>
 
     <h2>What is your focus today</h2>
 
-    <script src="scipts/script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
